# rust-api

./: 2  Cargo.toml  docker-compose.yml  k6.js
migrations/: 20250828113803_create_users.down.sql  20250828113803_create_users.sql  20250828113803_create_users.up.sql  20250901162304_create_categories_table.down.sql  20250901162304_create_categories_table.up.sql  20250901163056_create_products_table.down.sql  20250901163056_create_products_table.sql  20250901163056_create_products_table.up.sql  20250902053227_create_orders_table.down.sql  20250902053227_create_orders_table.up.sql  20250902053456_create_order_items_table.down.sql  20250902053456_create_order_items_table.up.sql  20250902053606_create_payments_table.down.sql  20250902053606_create_payments_table.up.sql  20250902053750_create_shipping_addresses_table.down.sql  20250902053750_create_shipping_addresses_table.up.sql
src/: db.rs  main.rs
src/auth/: auth_controller.rs  auth_model.rs  auth_service.rs  mod.rs
src/categories/: category_controller.rs  category_model.rs  category_repository.rs  category_service.rs  category_service_test.rs  mod.rs
src/common/: model.rs
src/orders/: mod.rs  order_controller.rs  order_model.rs  order_repository.rs  order_repository_test.rs  order_service.rs  order_service_test.rs
src/products/: mod.rs  product_controller.rs  product_model.rs  product_repository.rs  product_service.rs  product_service_test.rs
src/users/: mod.rs  user_controller.rs  user_model.rs  user_repository.rs  user_service.rs  user_service_test.rs
