[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
bcrypt = "0.17.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
] }
tokio = "1.47.1"
validator = { version = "0.20.0", features = ["derive"] }
